# django-supercharged

./: .gitignore  .pre-commit-config.yaml  README.md  manifest.in  requirements.dev.in  setup.cfg  setup.py
supercharged/: apps.py  middleware.py  services.py  tests.py  utils.py
supercharged/management/commands/: add_global_templates.py  backup_sqlite3_media.py  crud_model.py  generate_key.py  migrate_from_json.py  setup_site.py  startbigapp.py
supercharged/management/commands/cookiecutter_recipes/bigapp/: cookiecutter.json
supercharged/management/commands/cookiecutter_recipes/bigapp/hooks/: post_gen_project.py
supercharged/management/commands/cookiecutter_recipes/bigapp/{{cookiecutter.app_name}}/: apps.py
supercharged/management/commands/stubbs/default/: admin.py  api.py  model.py  urls.py  views.py
supercharged/management/commands/stubbs/default/templates/: base.html  base_htmx.html  create.html  delete.html  detail.html  list.html  update.html
supercharged/themes/bootstrap/static/bootstrap/bootswatch/cerulean/: bootstrap.css  bootstrap.min.css
supercharged/themes/bootstrap/static/bootstrap/bootswatch/cosmo/: bootstrap.css  bootstrap.min.css
supercharged/themes/bootstrap/static/bootstrap/bootswatch/cyborg/: bootstrap.css  bootstrap.min.css
supercharged/themes/bootstrap/static/bootstrap/bootswatch/darkly/: bootstrap.css  bootstrap.min.css
supercharged/themes/bootstrap/static/bootstrap/bootswatch/flatly/: bootstrap.css  bootstrap.min.css
supercharged/themes/bootstrap/templates/: base.html  base_sceleton.html  service_message.html
supercharged/themes/tailwind/templates/: base.html  base_sceleton.html
(+43 files in other folders)
